--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<div class="col-lg-12">
 				<div class="panel-heading">
 					<h1>
-						Let's Take a Road Trip
+						Let's Take a Road Trip!
 					</h1>
 				</div>
 			</div>
