--- a/steven-index.html
+++ b/steven-index.html
@@ -18,7 +18,7 @@
     <title>Document</title>
 </head>
 <body>
-    <button type="button" class="btn btn-primary">Primary</button>
+    <button type="button" class="btn btn-primary">Find Location</button>
     <div id="map"></div>
 
 
@@ -33,8 +33,9 @@
 
     <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBn5ySae8mKDqxCbjeeF8qw16nylIjhUu0&libraries=geometry,places"> -->
     </script>
-    <script src="assets/javascript/steven-js.js"></script>
+    
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBn5ySae8mKDqxCbjeeF8qw16nylIjhUu0&callback=initMap" async
         defer></script>
+        <script src="assets/javascript/steven-js.js"></script>
 </body>
 </html>
