--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> 
+	<div class="container-fluid"> 
 	<div class="row">
 		<div class="col-md-12">
 			<div class="panel" id="restaurant">
@@ -35,7 +36,8 @@
 					<form role="form">
 						<div class="form-group">
 							<label for="restaurants">Name</label>
-							<input type="text" class="form-control" id="restaurant" name="restaurant">
+                            <input type="text" class="form-control" id="restaurant" name="restaurant">
+                            <button class="btn" type="submit" id="formsubmit" style="padding:6px">Submit</button>
 						</div>
 					</form>
 				</div>
@@ -59,15 +61,15 @@
 									<div class="data">Field 2</div>
 								</li>
 								<li>
-									<div class="data">FIeld 3</div>
+									<div class="data">Field 3</div>
 								</li>
 								<li>
 									<div class="data">Field 4</div>
 								</li>
 								<li>
-									<div class="data">FIeld 5</div>
+									<div class="data">Field 5</div>
 								</li>
-
+							</ul>
 						</div>
 					</div>
 				</div>
@@ -146,7 +148,8 @@
 					<form role="form">
 						<div class="form-group">
 							<label for="restaurants">Name</label>
-							<input type="text" class="form-control" id="restaurant" name="restaurant">
+                            <input type="text" class="form-control" id="restaurant" name="restaurant">
+                            <button class="btn" type="submit" id="formsubmit">Submit</button>
 						</div>
 					</form>
 				</div>
@@ -162,13 +165,15 @@
 					<form role="form">
 						<div class="form-group">
 							<label for="restaurants">Name</label>
-							<input type="text" class="form-control" id="restaurant" name="restaurant">
+                            <input type="text" class="form-control" id="restaurant" name="restaurant">
+                            <button class="btn" type="submit" id="formsubmit">Submit</button>
 						</div>
 					</form>
 				</div>
 			</div>
 		</div>
-
+	</div>
+ 
 </body>
 
 </html>
