Added file links to index

--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
     crossorigin="anonymous">
   <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase.js"></script>
+
+  <link rel="stylesheet" type="text/css" href="assets/css/steven-css.css">
 </head>
 <body>
   
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="crossorigin="anonymous"></script>
   <script src="assets/javascript/zomatoApp.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBn5ySae8mKDqxCbjeeF8qw16nylIjhUu0&callback=initMap" async
+        defer></script>
+<script src="assets/javascript/steven-js.js"></script>
 </body>
 </html>
