--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
   <script src="assets/javascript/zomatoApp.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBn5ySae8mKDqxCbjeeF8qw16nylIjhUu0&callback=initMap" async
         defer></script>
-<script src="assets/javascript/steven-js.js"></script>
+<script src="assets/javascript/gas.js"></script>
 </body>
 </html>
