--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Page Title</title>
+  <title>Project Road Trip</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
     crossorigin="anonymous">
@@ -15,15 +15,16 @@
 </head>
 
 <body>
-  <div class="container-fluid">
 
-    <div class="jumbotron text-center">
-      <h1 class="display-2">
-        Let's Take a Road Trip!
-      </h1>
-    </div>
+  <header class="header">
+    <div class="container-fluid">
+          <h1 class="display-4 text-center">
+            Let's Take a Road Trip!
+          </h1>
+      </div>
+  </header>
 
-
+  <main class="container-fluid">
     <div class="row">
       <div class="col-md-12">
         <div class="card" id="restaurant">
@@ -51,7 +52,9 @@
 
     <div class="row mt-3">
       <div class="col-lg-12">
+
         <div class="card-deck">
+
           <div class="card">
             <div class="card-header">
               <h4>Restaurants</h4>
@@ -82,11 +85,7 @@
               <h4>Location</h4>
             </div>
             <div class="card-body" id="map">
-              <div class="row">
-                <div class="col-md-12 bold">
 
-                </div>
-              </div>
             </div>
           </div>
 
@@ -124,49 +123,58 @@
 
 
     <div class="row mt-3">
-      <div class="col-md-6">
-        <div class="card" id="restaurant">
-          <div class="card-header">
-            <h5>Restaurant Search</h5>
+      <div class="col-lg-12">
+        <div class="card-deck">
+          <div class="card" id="restaurant">
+            <div class="card-header">
+              <h5>Restaurant Search</h5>
+            </div>
+            <div class="card-body">
+              <form role="form">
+                <div class="form-group">
+                  <div class="input-group">
+                    <input type="text" class="form-control" id="restaurant" name="restaurant">
+                    <button class="btn" type="submit" id="formsubmit">Submit</button>
+                  </div>
+                </div>
+              </form>
+            </div>
           </div>
-          <div class="card-body">
-            <form role="form">
-              <div class="form-group">
-                <label for="restaurants">Name</label>
-                <input type="text" class="form-control" id="restaurant" name="restaurant">
-                <button class="btn" type="submit" id="formsubmit">Submit</button>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
 
-      <div class="col-md-6">
-        <div class="card" id="restaurant">
-          <div class="card-header">
-            <h5>Gas Station Search</h5>
-          </div>
-          <div class="card-body">
-            <form role="form">
-              <div class="form-group">
-                <label for="restaurants">Name</label>
-                <input type="text" class="form-control" id="restaurant" name="restaurant">
-                <button class="btn" type="submit" id="formsubmit">Submit</button>
-              </div>
-            </form>
+
+          <div class="card" id="restaurant">
+            <div class="card-header">
+              <h5>Gas Station Search</h5>
+            </div>
+            <div class="card-body">
+              <form role="form">
+                <div class="form-group">
+                  <div class="input-group">
+                    <input type="text" class="form-control" id="restaurant" name="restaurant">
+                    <button class="btn" type="submit" id="formsubmit">Submit</button>
+                  </div>
+                </div>
+              </form>
+            </div>
           </div>
         </div>
       </div>
-      
     </div>
+  </main>
+    <footer class="footer mt-3 p-3 bg-light">
+      <div class="container-fluid">
+        <span>This is a footer</span>
+      </div>
+    </footer>
+  
 
 
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-      crossorigin="anonymous"></script>
-    <script src="assets/javascript/zomatoApp.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBn5ySae8mKDqxCbjeeF8qw16nylIjhUu0&callback=initMap" async
-      defer></script>
-    <script src="assets/javascript/steven-js.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+  <script src="assets/javascript/zomatoApp.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBn5ySae8mKDqxCbjeeF8qw16nylIjhUu0&callback=initMap" async
+    defer></script>
+  <script src="assets/javascript/steven-js.js"></script>
 </body>
 
 </html>
