markers working on the most basic level possible

--- a/steven-index.html
+++ b/steven-index.html
@@ -17,6 +17,7 @@
     <div id="map"></div>
     <div id="lat-display"><span id="latData"></span></div>
     <div id="lng-display"><span id="lngData"></span></div>
+    <div id="zip-code"><span id="zipData"></span></div>
     
 
       <div class="input-group mb-3">
