Added formated restaraunt results by dynamic jquery

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     crossorigin="anonymous">
   <!-- <link rel="stylesheet" type="text/css" href="assets\css\style.css"> -->
   <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase.js"></script>
+  <!-- Add icon library -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <link rel="stylesheet" type="text/css" href="assets/css/steven-css.css">
 </head>
@@ -18,10 +20,10 @@
 
   <header class="header">
     <div class="container-fluid">
-          <h1 class="display-4 text-center">
-            Let's Take a Road Trip!
-          </h1>
-      </div>
+      <h1 class="display-4 text-center">
+        Project Road Trip!
+      </h1>
+    </div>
   </header>
 
   <main class="container-fluid">
@@ -60,23 +62,6 @@
               <h4>Restaurants</h4>
             </div>
             <div class="card-body" id="food">
-              <ul class="list-unstyled">
-                <li>
-                  <div class="data">Field 1</div>
-                </li>
-                <li>
-                  <div class="data">Field 2</div>
-                </li>
-                <li>
-                  <div class="data">Field 3</div>
-                </li>
-                <li>
-                  <div class="data">Field 4</div>
-                </li>
-                <li>
-                  <div class="data">Field 5</div>
-                </li>
-              </ul>
             </div>
           </div>
 
@@ -161,12 +146,19 @@
       </div>
     </div>
   </main>
-    <footer class="footer mt-3 p-3 bg-light">
-      <div class="container-fluid">
-        <span>This is a footer</span>
+
+  <footer class="footer mt-3 p-3 bg-light">
+    <div class="container-fluid">
+      <div class="counter">
+        <a href="http://www.hitwebcounter.com" target="_blank">
+          <img src="http://hitwebcounter.com/counter/counter.php?page=6913519&style=0006&nbdigits=5&type=page&initCount=0" title="http://www.hitwebcounter.com/htmltutorial.php"
+            Alt="http://www.hitwebcounter.com/htmltutorial.php" border="0">
+        </a>
       </div>
-    </footer>
-  
+      <span>This is a footer</span>
+    </div>
+  </footer>
+
 
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
