--- a/steven-index.html
+++ b/steven-index.html
@@ -15,12 +15,12 @@
 <body>
     <button type="button" id="button-1" class="btn btn-primary">Find Location</button>
     <div id="map"></div>
-    <div id="lat-display"><span id="latData"></span></div>
-    <div id="lng-display"><span id="lngData"></span></div>
-    <div id="zip-code"><span id="zipData"></span></div>
+    <!-- <div id="lat-display"><span id="latData"></span></div>
+    <div id="lng-display"><span id="lngData"></span></div> -->
+    <!-- <div id="zip-code"><span id="zipData"></span></div> -->
     
 
-      <div class="input-group mb-3">
+      <!-- <div class="input-group mb-3">
         <div class="input-group-prepend">
           <span class="input-group-text" id="inputGroup-sizing-default">Latitude</span>
         </div>
@@ -32,7 +32,7 @@
         </div>
         <input id="user-Lng" type="text" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default">
       </div>
-      <button type="button" id="button-2" class="btn btn-secondary">Show the STUFF!!!</button>
+      <button type="button" id="button-2" class="btn btn-secondary">Show the STUFF!!!</button> -->
 <!-- scripts -->
     <script
         src="https://code.jquery.com/jquery-3.3.1.min.js"
