--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
               <form role="form">
                 <div class="form-group">
                   <div class="input-group">
-                    <input type="text" class="form-control" id="restaurant" name="restaurant">
-                    <button class="btn" type="submit" id="formsubmit">Submit</button>
+                    <input type="text" class="form-control" id="station" name="station">
+                    <button class="btn" id="gasStation">Submit</button>
                   </div>
                 </div>
               </form>
@@ -169,7 +169,7 @@
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
 
-  <script src="assets/javascript/gas.js"></script>
+
 
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -178,6 +178,8 @@
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBn5ySae8mKDqxCbjeeF8qw16nylIjhUu0&callback=initMap" async
     defer></script>
   <script src="assets/javascript/steven-js.js"></script>
+  <script src="assets/javascript/gas.js"></script>
+
 </body>
 
 </html>
