Added creation of list to submit restuaruant submit button

--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
               <form role="form">
                 <div class="form-group">
                   <div class="input-group">
-                    <input type="text" class="form-control" id="restaurant" name="restaurant">
-                    <button class="btn" type="submit" id="formsubmit">Submit</button>
+                    <input type="text" class="form-control" id="restInput" name="restaurant">
+                    <button class="btn" type="submit" id="foodFormsubmit">Submit</button>
                   </div>
                 </div>
               </form>
@@ -127,7 +127,7 @@
           </div>
 
 
-          <div class="card" id="restaurant">
+          <div class="card" id="gasStations">
             <div class="card-header">
               <h5>Gas Station Search</h5>
             </div>
@@ -164,8 +164,8 @@
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
   <script src="assets/javascript/zomatoApp.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBn5ySae8mKDqxCbjeeF8qw16nylIjhUu0&callback=initMap" async
-    defer></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBn5ySae8mKDqxCbjeeF8qw16nylIjhUu0&callback=initMap" async defer>
+  </script>
   <script src="assets/javascript/steven-js.js"></script>
 </body>
 
