added icons to html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
     crossorigin="anonymous">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
   <!-- <link rel="stylesheet" type="text/css" href="assets\css\style.css"> -->
   <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase.js"></script>
   <!-- Add icon library -->
@@ -58,8 +59,8 @@
         <div class="card-deck">
 
           <div class="card">
-            <div class="card-header">
-              <h4>Restaurants</h4>
+            <div class="card-header"> 
+              <h4>Restaurants <span class="fas fa-utensils"></span> </h4>
             </div>
             <div class="card-body" id="food">
             </div>
@@ -67,7 +68,7 @@
 
           <div class="card">
             <div class="card-header">
-              <h4>Location</h4>
+              <h4>Location <span class="fas fa-map-marker"></span></h4>
             </div>
             <div class="card-body" id="map">
 
@@ -75,8 +76,8 @@
           </div>
 
           <div class="card">
-            <div class="card-header">
-              <h4>Gas Station</h4>
+            <div class="card-header"> 
+              <h4>Gas Station <img src="https://png.icons8.com/ios/50/000000/gas-station-filled.png" style=height:30px width:30px;> </h4>
             </div>
             <div class="card-body" id="gas">
               <div class="row">
