Changed footer text

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             Alt="http://www.hitwebcounter.com/htmltutorial.php" border="0">
         </a>
       </div>
-      <span>This is a footer</span>
+      <span>Project Road Trip 2018</span>
     </div>
   </footer>
 
