Implimented css styling via external styling that was formly done via inline styling

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- Add icon library -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-  <!-- <link rel="stylesheet" type="text/css" href="assets/css/steven-css.css"> -->
+  <link rel="stylesheet" type="text/css" href="assets/css/steven-css.css">
 </head>
 
 <body>
@@ -32,18 +32,17 @@
       <div class="col-md-12">
         <div class="card" id="restaurant">
           <div class="card-header">
-            <h5>Location Search</h5>
           </div>
           <div class="card-body" id="test">
             <form role="form">
               <div class="form-group">
                 <div class="input-group">
                   <span class="input-group-btn">
-                    <button type="button" class="btn btn-primary" id="button-1">Get My Location</button>
+                    <button type="button" class="btn btn-secondary" id="button-1">Get My Location</button>
                   </span>
                   <input type="text" class="form-control" id="restaurant" name="restaurant">
                   <span class="input-group-btn">
-                    <button class="btn" type="submit" id="formsubmit">Submit</button>
+                    <button class="btn" type="submit" id="formsubmit">Search</button>
                   </span>
                 </div>
               </div>
@@ -77,7 +76,7 @@
 
           <div class="card">
             <div class="card-header"> 
-              <h4>Gas Station <img src="https://png.icons8.com/ios/50/000000/gas-station-filled.png" style=height:30px width:30px;> </h4>
+              <h4>Gas Station <img class="img" style="height:20px;"src="https://png.icons8.com/ios/50/000000/gas-station-filled.png"> </h4>
             </div>
             <div class="card-body" id="gas">
             </div>
@@ -99,7 +98,7 @@
                 <div class="form-group">
                   <div class="input-group">
                     <input type="text" class="form-control" id="restInput" name="restaurant">
-                    <button class="btn" type="submit" id="foodFormsubmit">Submit</button>
+                    <button class="btn btn-secondary" type="submit" id="foodFormsubmit">Search</button>
                   </div>
                 </div>
               </form>
@@ -116,7 +115,7 @@
                 <div class="form-group">
                   <div class="input-group">
                     <input type="text" class="form-control" id="station" name="station">
-                    <button class="btn" id="gasStation">Submit</button>
+                    <button class="btn btn-secondary" id="gasStation">Search</button>
                   </div>
                 </div>
               </form>
