--- a/index.html
+++ b/index.html
@@ -30,24 +30,66 @@
   <main class="container-fluid">
     <div class="row">
       <div class="col-md-12">
-        <div class="card" id="restaurant">
+        <div class="card" id="location">
           <div class="card-header">
           </div>
-          <div class="card-body" id="test">
+          <div class="card-body text-center" id="test">
             <form role="form">
-              <div class="form-group">
-                <div class="input-group">
+              <!-- <div class="form-group text-center"> -->
+                  <button type="button" class="btn btn-secondary" id="button-1">Get My Location Info</button>
+                  <button class="btn btn-secondary" type="submit" id="gasStation">Get Local Gas Stations</button>
+                  <button class="btn btn-secondary" type="submit" id="foodSubmit">Get Local Restaurants</button>
+                <!-- <div class="input-group">
                   <span class="input-group-btn">
-                    <button type="button" class="btn btn-secondary" id="button-1">Get My Location</button>
+                    
                   </span>
                   <input type="text" class="form-control" id="restaurant" name="restaurant">
                   <span class="input-group-btn">
                     <button class="btn" type="submit" id="formsubmit">Search</button>
                   </span>
-                </div>
-              </div>
+                </div> -->
+              <!-- </div> -->
             </form>
           </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row mt-3">
+      <div class="col-lg-12">
+        <div class="card-deck">
+          <div class="card" id="restaurant">
+            <div class="card-header">
+              <h5>Restaurant Search</h5>
+            </div>
+            <div class="card-body">
+              <form role="form">
+                <div class="form-group">
+                  <div class="input-group">
+                    <input type="text" class="form-control" id="restInput" name="restaurant">
+                    <button class="btn btn-secondary" type="submit" id="foodFormsubmit">Search</button>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+
+
+          <!-- <div class="card" id="gasStations">
+            <div class="card-header">
+              <h5>Gas Station Search</h5>
+            </div>
+            <div class="card-body">
+              <form role="form">
+                <div class="form-group">
+                  <div class="input-group">
+                    <input type="text" class="form-control" id="station" name="station">
+                    <button class="btn btn-secondary" id="gasStation">Search</button>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div> -->
         </div>
       </div>
     </div>
@@ -86,44 +128,7 @@
     </div>
 
 
-    <div class="row mt-3">
-      <div class="col-lg-12">
-        <div class="card-deck">
-          <div class="card" id="restaurant">
-            <div class="card-header">
-              <h5>Restaurant Search</h5>
-            </div>
-            <div class="card-body">
-              <form role="form">
-                <div class="form-group">
-                  <div class="input-group">
-                    <input type="text" class="form-control" id="restInput" name="restaurant">
-                    <button class="btn btn-secondary" type="submit" id="foodFormsubmit">Search</button>
-                  </div>
-                </div>
-              </form>
-            </div>
-          </div>
-
-
-          <div class="card" id="gasStations">
-            <div class="card-header">
-              <h5>Gas Station Search</h5>
-            </div>
-            <div class="card-body">
-              <form role="form">
-                <div class="form-group">
-                  <div class="input-group">
-                    <input type="text" class="form-control" id="station" name="station">
-                    <button class="btn btn-secondary" id="gasStation">Search</button>
-                  </div>
-                </div>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    
   </main>
 
   <footer class="footer mt-3 p-3 bg-light">
